Fixed an issue with the HomePage, where the scrollbar for the image items would not extend to the bottom of the page

--- a/frontend/src/App.module.scss
+++ b/frontend/src/App.module.scss
@@ -12,8 +12,8 @@
     width: 100rem;
     height: 100vh;
 
-    display: grid;
-    grid-template-rows: 12rem 1fr;
-    grid-row-gap: 2rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
   }
 }
